--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "server": "json-server --watch data/cities.json --port 9000"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.1"
