--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server": "json-server --watch data/cities.json --port 9000"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "json-server": "^1.0.0-beta.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
