--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-server": "^1.0.0-beta.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.28.1"
